fix marg and padding for Services and Prodcuts to fit layout on mobile

--- a/styles/Products.module.scss
+++ b/styles/Products.module.scss
@@ -131,6 +131,6 @@
 
 @include smartphone {
   .products_container {
-    margin-bottom: 10vh;
+    margin-bottom: 1rem;
   }
 }
