--- a/styles/Services.module.scss
+++ b/styles/Services.module.scss
@@ -1,3 +1,5 @@
+@import 'mixins';
+
 .container {
   position: relative;
   grid-column: 3/13;
@@ -192,5 +194,18 @@
     align-items: center;
     margin-bottom: 4rem;
     gap: 1.5rem;
+  }
+}
+
+@include smartphone {
+  .container {
+    margin-top: 0;
+    padding-top: 1rem;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .container {
+    padding-top: 8rem;
   }
 }
